fixed a few layout issues on selection screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
 
 html, body {
   width: 100%;
-  height: 102%;
+  height: 105%;
   font-family: 'Frijole', cursive;
 }
 
@@ -44,9 +44,19 @@ h1 {
   height:90%;
 }
 
+img.selectionImg:hover {
+  background-color:orange;
+}
+
 #waluigiImg {
   width: 60% !important;
   height: 60% !important;
+  padding-bottom:25%;
+}
+
+#startBtn {
+  margin-top:50%;
+  font-size:x-large;
 }
 
 #battlePage {
